@@ -30,6 +30,7 @@ Version 2.0-0, July 10, 2013
     * bugs.parfit: new-old function from extras directory.
       This is for parallel computations. See help file for
       details on suggested best practices.
+    * dc.parfit: now allows flavour="bugs" for all partypes options.
 
 Version 1.8-2, March 4, 2013
     * custommodel: splits length 1 character model by '\n'.
